--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -7,3 +7,11 @@
 # Leadership
 - skill: Leadership
   description: Managed multiple asynchronous teams in the development, maintenance, and release of various web applications and websites.
+  
+# Skill 1
+- skill: 1
+  description: 1111
+
+# Skill 2
+- skill: 2
+  description: 2222
